# dedup

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish-crate.yml  release.yml  validate.yml
benchmark/: Dockerfile  README.md  benchmark.py  config.py  generator.py  plotting.py  pyproject.toml  run-docker.sh  runner.py  tools.py
benchmark/results/: README.md  matrix_benchmark.json
benchmark/results/fast_disk/: matrix_benchmark.json
benchmark/results/slow_disk/: matrix_benchmark.json
src/: actions.rs  grouping.rs  hasher.rs  main.rs  output.rs  scanner.rs  util.rs
tests/: duplicate_detection.rs  exclude_glob.rs  exit_codes.rs  glob_pattern.rs  hardlink.rs  misc.rs  output_format.rs  size_filters.rs
tests/common/: mod.rs
