[package]
name = "dedup"
version = "0.1.0"
edition = "2024"
description = "Lightning-fast duplicate file finder"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.3"
jwalk = "0.8.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
tempfile = "3.24.0"
