[package]
name = "dedup-cli"
version = "0.3.1"
edition = "2024"
description = "An extremely fast and efficient duplicate file finder"
license = "MIT"
repository = "https://github.com/denizariyan/dedup"
readme = "README.md"
keywords = ["duplicate", "file", "finder", "deduplication", "hash"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Deniz Ariyan <contact@denizariyan.com>"]
exclude = [
    "benchmark",
    ".github",
]

[[bin]]
name = "dedup"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.3"
globset = "0.4.18"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.3"
jwalk = "0.8.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
