[project]
name = "dedup-benchmark"
version = "0.1.0"
description = "Benchmarking suite for dedup"
authors = [
    {name = "Deniz Ariyan"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=1.24.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
